--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,5 +25,6 @@ repos:
     rev: v1.10.0
     hooks:
       - id: mypy
+        args: ["--disable-error-code=no-redef"]
         additional_dependencies: []
         files: ^src/|^tests/
