--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,6 @@ dev = [
   "pytest-cov>=4",
   "black>=24.0",
   "ruff>=0.5",
-  "mypy>=1.8",
   "pre-commit>=3.6",
 ]
 # Documentation stack
@@ -58,6 +57,9 @@ include-package-data = true
 [tool.setuptools.packages.find]
 where = ["src"]
 
+[tool.setuptools.package-data]
+structures = ["py.typed"]
+
 [tool.black]
 line-length = 100
 target-version = ["py39", "py310", "py311", "py312"]
@@ -74,16 +76,6 @@ known-first-party = ["structures"]
 
 [tool.ruff.lint.per-file-ignores]
 "tests/**" = ["PLR2004"]
-
-[tool.mypy]
-python_version = "3.9"
-strict = true
-warn_unused_configs = true
-warn_redundant_casts = true
-warn_return_any = true
-warn_unused_ignores = true
-show_error_codes = true
-pretty = true
 
 [tool.pytest.ini_options]
 minversion = "7.0"
