--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "structures"
 version = "0.1.0"
-description = "A Python package for data structures (project scaffold)."
+description = "A python package designed for structural analysis"
 readme = "README.md"
 requires-python = ">=3.9"
 authors = [
