--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,4 +35,4 @@ repos:
           - flake8-bugbear>=23.0.0
         args:
           - --max-line-length=88
-          - --extend-ignore=E203,W503
+          - --extend-ignore=E203,W503,D100
