--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,29 +10,24 @@ repos:
       - id: check-toml
       - id: check-merge-conflict
 
-  # Python code formatting
-  - repo: https://github.com/psf/black
-    rev: 23.7.0
+  # Ruff - Fast Python linter and formatter (replaces black + flake8 + isort)
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.1.6
     hooks:
-      - id: black
-        language_version: python3
+      # Run the linter
+      - id: ruff
+        args: [--fix]
+      # Run the formatter
+      - id: ruff-format
 
-  # Import sorting
-  - repo: https://github.com/pycqa/isort
-    rev: 5.12.0
-    hooks:
-      - id: isort
-        args: ["--profile", "black"]
-
-  # Type hint enforcement and other Python linting
+  # Type hint enforcement specifically
   - repo: https://github.com/pycqa/flake8
     rev: 6.0.0
     hooks:
       - id: flake8
         additional_dependencies:
           - flake8-annotations>=3.0.0
-          - flake8-docstrings>=1.7.0
-          - flake8-bugbear>=23.0.0
         args:
+          - --select=ANN
+          - --ignore=ANN101,ANN102,ANN204
           - --max-line-length=88
-          - --extend-ignore=E203,W503,D100
