--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,6 +75,7 @@ known-first-party = ["structures"]
 
 [tool.ruff.lint.per-file-ignores]
 "tests/**" = ["PLR2004"]
+"src/structures/structural_entity.py" = ["ANN401"]
 
 [tool.pytest.ini_options]
 minversion = "7.0"
