--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,7 @@ known_first_party = ["structures"]
 
 [tool.flake8]
 max-line-length = 88
-extend-ignore = ["E203", "W503", "D100"]
+extend-ignore = ["E203", "W503", "D100", "ANN401"]
 per-file-ignores = [
     "__init__.py:F401",
     "tests/*:D"
@@ -75,7 +75,6 @@ known-first-party = ["structures"]
 
 [tool.ruff.lint.per-file-ignores]
 "tests/**" = ["PLR2004"]
-"src/structures/structural_entity.py" = ["ANN401"]
 
 [tool.pytest.ini_options]
 minversion = "7.0"
