--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,8 @@ max-line-length = 88
 extend-ignore = ["E203", "W503", "D100", "ANN401"]
 per-file-ignores = [
     "__init__.py:F401",
-    "tests/*:D"
+    "tests/*:D",
+    "src/structures/structural_entity.py:ANN401",
 ]
 
 [project.urls]
